@@ -177,8 +177,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2013-2015 Michal Josef Špaček
- BSD 2-Clause License
+© 2013-2015 Michal Josef Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
